nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: default
spec:
  selector:
    app: nexus
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
